--- a/src/views/authorBooks.ejs
+++ b/src/views/authorBooks.ejs
@@ -18,8 +18,8 @@
           <div class="feature-icon bg-gradient">
             <img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Catcher-in-the-rye-red-cover.jpg" alt="" width="172" height="257">
           </div>
-          <h2>Book Title</h2>
-          <p>Book description.</p>
+          <h2><%= book.title %></h2>
+          <p><%= book.description %></p>
           <a href="#" class="icon-link">
             Detail
           </a>
@@ -29,8 +29,8 @@
           <div class="feature-icon bg-gradient">
             <img class="d-block mx-auto mb-4" src="https://upload.wikimedia.org/wikipedia/commons/8/8e/Catcher-in-the-rye-red-cover.jpg" alt="" width="172" height="257">
           </div>
-          <h2>Book Title</h2>
-          <p>Book description.</p>
+          <h2><%= book.title %></h2>
+          <p><%= book.description %></p>
           <a href="#" class="icon-link">
             Detail
           </a>
