--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -31,7 +31,9 @@
                 <div class="col-md-9 pe-5">
   
                   <input type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" />
-  
+                  <% if (locals.errors && errors.email) { %>
+                    <p class="text-danger"><%= errors.email.msg %></p>
+                  <% } %>
                 </div>
               </div>
   
@@ -46,7 +48,6 @@
                 <div class="col-md-9 pe-5">
   
                   <input type="password" name="password" class="form-control form-control-lg" >
-  
                 </div>
               </div>
   
@@ -64,6 +65,7 @@
     </div>
   </section>
 </div>
+<script src="/js/validationsLogin.js"></script>
 <%- include('partials/footer.ejs') %>
 </body>
 </html>
