--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -11,8 +11,9 @@
     </ul>
 
     <div class="col-md-3 text-end">
-      <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
-      <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
+        <a href="/logout" class="btn btn-outline-primary me-2">Logout</a>
+        <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
+        <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
     </div>
   </header>
 </div>
