--- a/src/views/register.ejs
+++ b/src/views/register.ejs
@@ -18,7 +18,7 @@
         <div class="col-xl-9">
   
           <h1 class="text-white mb-4">Register a new user</h1>
-  
+          <ul class="errores"></ul>
           <form action="/users/register" method="POST" class="card" style="border-radius: 15px;">
             <div class="card-body">
   
@@ -29,7 +29,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="name" class="form-control form-control-lg" />
+                  <input class="errors" type="text" name="name" id="name" class="form-control form-control-lg" />
                   <% if (locals.errors && errors.name) { %>
                     <p class="text-danger"><%= errors.name.msg %></p>
                   <% } %> 
@@ -46,7 +46,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="email" name="email" class="form-control form-control-lg" placeholder="example@gmail.com" />
+                  <input type="email" name="email" id="email" class="form-control form-control-lg" placeholder="example@gmail.com" />
                   <% if (locals.errors && errors.email) { %>
                     <p class="text-danger"><%= errors.email.msg %></p>
                   <% } %>
@@ -78,7 +78,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="password" name="password" class="form-control form-control-lg" >
+                  <input class="errors" type="password" name="password" id= "password"class="form-control form-control-lg" >
                   <% if (locals.errors && errors.password) { %>
                     <p class="text-danger"><%= errors.password.msg %></p>
                   <% } %>
@@ -119,4 +119,6 @@
 </div>
 <%- include('partials/footer.ejs') %>
 </body>
+<script src="/js/validationsRegistro.js"></script>
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </html>
