--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -9,11 +9,13 @@
       <li><a href="/authors" class="nav-link px-2 link-dark">Authors</a></li>
       <li><a href="/books/search" class="nav-link px-2 link-dark">Search</a></li>
     </ul>
-
+    <% if (locals.isLogged) { %>
     <div class="col-md-3 text-end">
-        <a href="/logout" class="btn btn-outline-primary me-2">Logout</a>
-        <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
-        <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
-    </div>
+          <a href="/logout" class="btn btn-outline-primary me-2">Logout</a>
+        <% } else { %>
+          <a href="/users/login" class="btn btn-outline-primary me-2">Login</a>
+          <a href="/users/register" class="btn btn-outline-primary me-2">Sign-up</a>
+        <% } %>
+  </div>
   </header>
 </div>
