--- a/src/views/editBook.ejs
+++ b/src/views/editBook.ejs
@@ -30,7 +30,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="title" class="form-control form-control-lg" />
+                  <input type="text" name="title" value="<%= book.title %>" class="form-control form-control-lg" />
   
                 </div>
               </div>
@@ -45,7 +45,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="cover" class="form-control form-control-lg" />
+                  <input type="text" name="cover" value="<%= book.cover %>" class="form-control form-control-lg" />
   
                 </div>
               </div>
@@ -60,7 +60,7 @@
                 </div>
                 <div class="col-md-9 pe-5">
   
-                  <input type="text" name="description" class="form-control form-control-lg" />
+                  <input type="text" name="description" value="<%= book.description %>" class="form-control form-control-lg" />
   
                 </div>
               </div>
